<resources>
    <string name="app_name">Totime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="totimer">Totimer</string>
    <string name="totime_log">Totime Log</string>
    <string name="profile">Profile</string>
    <string name="covid_19">Covid-19</string>
    <string name="saved">Saved</string>
    <string name="start_timer" translatable="false">00:00:00</string>
    <string name="current_timer" translatable="false">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="activity_name">Activity Name</string>
    <string name="place">Place</string>
    <string name="positive">Positive:</string>
    <string name="zero" translatable="false">0</string>
    <string name="death">Death:</string>
    <string name="hospitalized">Hospitalized:</string>
    <string name="recovered">Recovered:</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="description">Helps you record and \nmanage activities</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="data_saved">Data Saved</string>
    <string name="check_internet">Check your Internet Connection</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="field_not_empty">Field can\'t be empty.</string>
    <string name="activity_less_30">Activity Name should at most 30 characters.</string>
    <string name="place_less_70">Place should at most 70 characters.</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="name_less_50">Name should at most 50 characters.</string>
    <string name="email_less_70">Email should at most 70 characters.</string>
    <string name="email_not_valid">Email address is not valid.</string>
    <string name="perm_denied">Permission Denied</string>
    <string name="perm_denied_desc">This app need storage permissions so you can take or edit your profile picture.\n\nAfter enabling, press back and try access profile again.</string>
    <string name="enable_manually">Enable</string>
    <string name="about">About</string>
    <string name="about_desc">An application to help you record and manage your activities, as well as get up-to-date covid cases in Indonesia.</string>
    <string name="creator">- Michael Susanto -</string>
</resources>